frontend/test/should_pass/inh_attrib_002.grg
using inh_attrib_model_002;

rule r {

	replace {
	}
}

