frontend/test/should_fail/inh_attrib_001.grg
using inh_attrib_model_001;

rule r {

	replace {
	}
}

